trying to fix the link to the credits on iphones, since it did not work before

--- a/style.css
+++ b/style.css
@@ -7,3 +7,7 @@ canvas {
 	margin-left: auto;
     margin-right: auto;
 }
+
+.creditLink {
+	display: none;
+}
